# fps-game

./: .gitignore  LICENSE  Makefile  default.nix  fps-game.cabal  shell.nix  stack-shell.nix  stack.yaml
ffi/cbits/: flib.c
game/: GUI.gd  GUI.tscn  Player.gd  Player.gdns  World.gd  World.tscn  project.godot
game-tmp/: Player.tscn
game/assets/: ShareTechFont.tres
game/lib/: libfps-game.gdnlib
src/: Lib.hs
src/Game/: Player.hs  Utils.hs
src/Project/: Requirements.hs  Scenes.hs  Support.hs
src/Project/Scenes/: GUI.hs  Player.hs  World.hs
