cabal-version: 1.12

name:           fps-game
version:        0.0.0.0
description:    Please see the README on Github at <https://github.com/YellowOnion/fps-game#readme>
homepage:       https://github.com/YellowOnion/fps-game#readme
bug-reports:    https://github.com/YellowOnion/fps-game/issues
author:         Daniel Hill
maintainer:     daniel@gluo.nz
copyright:      OSL-3.0
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/YellowOnion/fps-game

library
  exposed-modules: Lib
  other-modules:
    Game.Player
    Game.Utils
    Project.Requirements
    Project.Scenes.Player
    Project.Support

  hs-source-dirs: src game
  ghc-options:
    -Wall
    -fwarn-unused-do-bind
    -fwarn-tabs
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates
    -O2
  build-depends:
      base >=4.12 && <5
    , godot-haskell
    , template-haskell
    , containers
    , th-abstraction
    , lens
    , linear
    , stm
    , text
    , vector
  default-language: Haskell2010

foreign-library fps-game
  type: native-shared
  other-modules: FLib
  hs-source-dirs: ffi/flib
  c-sources: ffi/cbits/flib.c
  build-depends:
      base >= 4.12 && <5
    , godot-haskell
    , fps-game
  default-language: Haskell2010

